# rust-api

./: .env.example  Cargo.toml  README.md  docker-compose.yml
migrations/: 20260131172526_init.up.sql
src/: main.rs  model.rs  schema.rs  services.rs
