[package]
name = "rust-api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix = "0.13"
actix-web = "4.9"
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
env_logger = "0.11"
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-native-tls", "postgres", "uuid", "chrono"] }
uuid = { version = "1.10", features = ["serde", "v4"] }
tokio = { version = "1", features = ["full"] }